--- a/IHC projeto/cnpj.html
+++ b/IHC projeto/cnpj.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/img/unnamed.jpg" alt="Logo Formo Search">
+            <img src="/img/Logo.jpg" alt="Logo Formo Search">
         </div>
         <nav>
             <ul>
