--- a/IHC projeto/footerEheader.html
+++ b/IHC projeto/footerEheader.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/img/CNPJ.png" class="card-img-top" alt="Card 4">
+                        <img src="/img/CNPJ.jpg" class="card-img-top" alt="Card 4">
                         <div class="card-body">
                             <h5 class="card-title">API CNPJ</h5>
                             <p class="card-text">A API Minha Receita tem como foco buscar por CNPJs brasileiros ativados e desativados. O Cadastro Nacional da Pessoa Jurídica é um 
